--- a/roles/k3s_server/tasks/main.yml
+++ b/roles/k3s_server/tasks/main.yml
@@ -30,7 +30,7 @@
       ansible.builtin.command:
         cmd: /usr/local/bin/k3s-install.sh
       environment:
-        INSTALL_K3S_SKIP_START: "true"
+        INSTALL_K3S_SKIP_START: "false"
         INSTALL_K3S_VERSION: "{{ k3s_version }}"
       changed_when: true
 
