--- a/roles/k3s_server/tasks/main.yml
+++ b/roles/k3s_server/tasks/main.yml
@@ -30,15 +30,11 @@
       ansible.builtin.command:
         cmd: /usr/local/bin/k3s-install.sh
       environment:
-        INSTALL_K3S_SKIP_START: "false"
+        INSTALL_K3S_SKIP_START: "true"
         INSTALL_K3S_VERSION: "{{ k3s_version }}"
       changed_when: true
 
-- name: Add K3s autocomplete to user bashrc
-  ansible.builtin.lineinfile:
-    path: "~{{ ansible_user }}/.bashrc"
-    regexp: '\.\s+<\(k3s completion bash\)'
-    line: ". <(k3s completion bash)  # Added by k3s-ansible"
+
 
 - name: Setup optional config file
   when: server_config_yaml is defined
@@ -212,3 +208,9 @@
         path: ~{{ ansible_user }}/.bashrc
         regexp: '\.\s+<\(kubectl completion bash\)'
         line: ". <(kubectl completion bash)  # Added by k3s-ansible"
+
+- name: Add K3s autocomplete to user bashrc
+  ansible.builtin.lineinfile:
+    path: "~{{ ansible_user }}/.bashrc"
+    regexp: '\.\s+<\(k3s completion bash\)'
+    line: ". <(k3s completion bash)  # Added by k3s-ansible"
