--- a/roles/k3s_server/tasks/main.yml
+++ b/roles/k3s_server/tasks/main.yml
@@ -79,7 +79,7 @@
       with_items: "{{ extra_service_envs }}"
 
     - name: Enable and check K3s service
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         name: k3s
         daemon_reload: true
         state: started
@@ -154,7 +154,7 @@
         mode: "0644"
 
     - name: Enable and check K3s service
-      ansible.builtin.systemd:
+      ansible.builtin.systemd_service:
         name: k3s
         daemon_reload: true
         state: started
