add kubens install

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -14,6 +14,7 @@
   roles:
     - role: k3s_server
     - role: install_helm
+    - role: k3s_server_config
 
 - name: Setup K3S agent
   hosts: agent
