--- a/roles/k3s_server_config/tasks/main.yml
+++ b/roles/k3s_server_config/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: "Create rke2-alias file"
-  ansible.builtin.copy:
-    dest: /etc/profile.d/00-kubectl-alias.sh
-    content: |
-      alias k="kubectl "
-      complete -o default -F __start_kubectl k
+
+- name: "k alias set edilmesi "
+  ansible.builtin.import_tasks: 01_k_alias.yml
+
+- name: "kubens ve kubectx yüklenmesi "
+  ansible.builtin.import_tasks: 02_kubens_install.yml
