--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,4 +1,5 @@
 ---
+
 - name: Cluster prep
   hosts: k3s_cluster
   gather_facts: true
@@ -15,6 +16,12 @@
     - role: k3s_server
     - role: install_helm
     - role: k3s_server_config
+    - role: install_prometheus
+      become_user: "vagrant"
+      install_prometheus_install: true
+      when:
+        - inventory_hostname == groups['server'][0]
+        - install_prometheus_install
 
 - name: Setup K3S agent
   hosts: agent
