--- a/roles/k3s_server/tasks/main.yml
+++ b/roles/k3s_server/tasks/main.yml
@@ -168,9 +168,10 @@
           k3s kubectl get nodes -l "node-role.kubernetes.io/control-plane=true" -o=jsonpath="{.items[*].metadata.name}"
       register: nodes
       until: nodes.rc == 0 and (nodes.stdout.split() | length) == (groups[server_group] | length)
-      retries: 20
+      retries: 2
       delay: 10
       changed_when: false
+      ignore_errors: true
 
 - name: Setup kubectl for user
   when: user_kubectl
